// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout snapshots same structure, density-only changes at 80x24 1`] = `
"DevAgent │ ollama-agent │ qwen3:30b │ ⎇ main │ ctx68% │ IDLE │ 10:42
─ 1 Conversation ──────────────────────────────────────────────────────────────
create filesystem tool
Analyzing project structure and existing patterns...
- Reading package.json
- Found TypeScript project















Chat· │ Plan· │ Exec▶ │ Tasks2 │ Git2 │ Logs· │ Mem· │ Mdl· │ MCP· │ Tok48k/71k
❯
Mode:NORMAL │ Model:qwen3:30b │ Workspace:ollama-agent │ Ctrl+P Palette"
`;

exports[`layout snapshots same structure, density-only changes at 100x30 1`] = `
"DevAgent │ ollama-agent │ qwen3:30b │ ⎇ main │ ctx68% │ IDLE │ 10:42
─ 1 Conversation ──────────────────────────────────────────────────────────────────────────────────
you ▸   create filesystem tool
agent ▸ Analyzing project structure and existing patterns...
        - Reading package.json
        - Found TypeScript project





















Chat· │ Plan· │ Exec▶ │ Tasks2 │ Git2 │ Logs· │ Mem· │ Mdl· │ MCP· │ Tok48k/71k
❯
Mode:NORMAL │ Model:qwen3:30b │ Workspace:ollama-agent │ Ctrl+P Palette"
`;

exports[`layout snapshots same structure, density-only changes at 120x30 1`] = `
"DevAgent │ ollama-agent │ qwen3:30b │ ⎇ main │ ctx68% │ IDLE │ 10:42
─ 1 Conversation ──────────────────────────────────────────────────────────────────────────────────────────────────────
you ▸   create filesystem tool
agent ▸ Analyzing project structure and existing patterns...
        - Reading package.json
        - Found TypeScript project





















Chat· │ Plan· │ Exec▶ │ Tasks2 │ Git2 │ Logs· │ Mem· │ Mdl· │ MCP· │ Tok48k/71k
❯
Mode:NORMAL │ Model:qwen3:30b │ Workspace:ollama-agent │ Ctrl+P Palette"
`;

exports[`layout snapshots same structure, density-only changes at 160x45 1`] = `
"DevAgent │ ollama-agent │ qwen3:30b │ ⎇ main │ ctx68% │ IDLE │ 10:42
─ 1 Conversation ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
you ▸   create filesystem tool
agent ▸ Analyzing project structure and existing patterns...
        - Reading package.json
        - Found TypeScript project




































Chat· │ Plan· │ Exec▶ │ Tasks2 │ Git2 │ Logs· │ Mem· │ Mdl· │ MCP· │ Tok48k/71k
❯
Mode:NORMAL │ Model:qwen3:30b │ Workspace:ollama-agent │ Ctrl+P Palette"
`;

exports[`layout snapshots same structure, density-only changes at 220x60 1`] = `
"DevAgent │ ollama-agent │ qwen3:30b │ ⎇ main │ ctx68% │ IDLE │ 10:42
─ 1 Conversation ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
you ▸   create filesystem tool
agent ▸ Analyzing project structure and existing patterns...
        - Reading package.json
        - Found TypeScript project



















































Chat· │ Plan· │ Exec▶ │ Tasks2 │ Git2 │ Logs· │ Mem· │ Mdl· │ MCP· │ Tok48k/71k
❯
Mode:NORMAL │ Model:qwen3:30b │ Workspace:ollama-agent │ Ctrl+P Palette"
`;
